@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-10-14T01:44:16Z",
-  "count" : 130,
-  "count_minmax" : [ 130, 130 ],
-  "count_decinc" : [ -0, +130 ],
+  "timestamp" : "2024-10-27T01:48:14Z",
+  "count" : 55,
+  "count_minmax" : [ 55, 130 ],
+  "count_decinc" : [ -75, +130 ],
   "uniques" : 3,
   "uniques_minmax" : [ 3, 3 ],
   "uniques_decinc" : [ -0, +3 ]
