@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2024-10-26T01:39:18Z",
-  "count_outdated" : 229375,
-  "uniques_outdated" : 2266,
-  "count" : 231167,
-  "uniques" : 2288,
+  "timestamp" : "2024-10-27T01:48:14Z",
+  "count_outdated" : 229503,
+  "uniques_outdated" : 2267,
+  "count" : 231319,
+  "uniques" : 2291,
   "clones" : [
     {
-      "timestamp": "2024-10-12T00:00:00Z",
-      "count": 53,
-      "count_minmax": [ 53, 128 ],
-      "count_decinc": [ 75, 128 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
       "timestamp": "2024-10-13T00:00:00Z",
-      "count": 130,
-      "count_minmax": [ 130, 130 ],
-      "count_decinc": [ 0, 130 ],
+      "count": 55,
+      "count_minmax": [ 55, 130 ],
+      "count_decinc": [ 75, 130 ],
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ],
       "uniques_decinc": [ 0, 3 ]
@@ -127,6 +118,24 @@
       "count": 128,
       "count_minmax": [ 128, 128 ],
       "count_decinc": [ 0, 128 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-10-26T00:00:00Z",
+      "count": 129,
+      "count_minmax": [ 129, 129 ],
+      "count_decinc": [ 0, 129 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-10-27T00:00:00Z",
+      "count": 23,
+      "count_minmax": [ 23, 23 ],
+      "count_decinc": [ 0, 23 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
