@@ -1,15 +1,10 @@
 {
-  "count": 1717,
-  "uniques": 9,
+  "count": 1741,
+  "uniques": 10,
   "clones": [
     {
-      "timestamp": "2024-10-12T00:00:00Z",
-      "count": 53,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-10-13T00:00:00Z",
-      "count": 130,
+      "count": 55,
       "uniques": 3
     },
     {
@@ -70,6 +65,16 @@
     {
       "timestamp": "2024-10-25T00:00:00Z",
       "count": 128,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-10-26T00:00:00Z",
+      "count": 129,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2024-10-27T00:00:00Z",
+      "count": 23,
       "uniques": 1
     }
   ]
